<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/generate_new_token_button"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:padding="20dp"
        android:background="#2196F3"
        android:layout_centerHorizontal="true"
        android:text="@string/generate_new_token_button_text"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        app:backgroundTint="#2196F3"/>


    <TextView
        android:id="@+id/token_output_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:layout_centerHorizontal="true"
        android:text="@string/token_output_text_label_text"
        android:textStyle="bold"
        android:textColor="#595858"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/token_output_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/token_output_text_label"
        android:layout_marginTop="10sp"
        android:layout_centerHorizontal="true"
        android:text="@string/token_output_text_default_view_text"
        android:textColor="#595858"
        android:textSize="22sp"
        />


    <LinearLayout
        android:id="@+id/custom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:padding="40dp"
        android:layout_below="@+id/token_output_text_view"
        >

        <EditText
            android:id="@+id/seed_field"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/seed_field_hint"
            android:textSize="20sp"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/secret_field"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/secret_field_hint"
            android:textSize="20sp"
            android:inputType="textPassword"/>
    </LinearLayout>

</RelativeLayout>


